--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/* Add this line at the top of the file */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
+/* Add any additional custom styles here */
